Test reset functions have been taken out and RemoveScreen has been added to AndroidManifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".AddScreen"></activity>
+        <activity android:name=".RemoveScreen"></activity>
     </application>
 
 </manifest>
